--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,5 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
-      - name: env
-        run: | 
-          ls
-          cl
       - name: build
-        run: cl /EHsc hello.cpp
+        run: cl /EHsc hello.cpp /out:hello_gha.exe
