--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,16 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: ilammy/msvc-dev-cmd@v1
+      
       - name: build
         run: cl /EHsc hello.cpp /out:hello_gha.exe
+        
+      - name: ls
+        run: ls
         
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with: 
-          name: ${{GITHUB_HEAD_REF}}_${{GITHUB_ACTOR}}-artifact
-          path: ".exe"
+          name: artifact
+          path: "*.exe"
           retention-days: 1
